--- a/ProjectNo4.ipynb
+++ b/ProjectNo4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN9RNJ2QKz5ahv761vxB7zT",
+      "authorship_tag": "ABX9TyNbdSsNj9h6R6KUPIP9BR30",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -190,25 +190,63 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from tensorflow.keras.models import Sequential\n",
+        "from keras.layers import Conv2D, Flatten, MaxPooling2D, Dense, Dropout, SpatialDropout2D\n",
+        "from tensorflow.keras.losses import sparse_categorical_crossentropy, binary_crossentropy\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+      ],
+      "metadata": {
+        "id": "S6D9f4mHa6SC"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train='Trash-Classifier-in-Python-using-Tensorflow/Data/Train'\n",
+        "test='Trash-Classifier-in-Python-using-Tensorflow/Data/Test'"
+      ],
+      "metadata": {
+        "id": "O4oTufZ6j1RB"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_generator=ImageDataGenerator(rescale=1/255)\n",
+        "train_generator=train_generator.flow_from_directory(train,\n",
+        "                                                    target_size=(300,300),\n",
+        "                                                    batch_size=32,\n",
+        "                                                    class_mode='sparse')\n",
+        "labels=(train_generator.class_indices)\n",
+        "print(labels,'\\n')\n",
+        "\n",
+        "labels=dict((v,k) for k,v in labels.items())\n",
+        "print(labels)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "S6D9f4mHa6SC",
-        "outputId": "688625a8-ed9e-4693-8993-54301fd09111"
+        "id": "u1-63h_KcUC5",
+        "outputId": "82f5d891-ee94-4f7c-877b-59ffd2878e1b"
       },
-      "execution_count": 11,
+      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 2186 images belonging to 6 classes.\n",
+            "{'cardboard': 0, 'glass': 1, 'metal': 2, 'paper': 3, 'plastic': 4, 'trash': 5} \n",
+            "\n",
+            "{0: 'cardboard', 1: 'glass', 2: 'metal', 3: 'paper', 4: 'plastic', 5: 'trash'}\n"
+          ]
         }
       ]
     },
@@ -216,7 +254,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "u1-63h_KcUC5"
+        "id": "A7ETxWcqlBJj"
       },
       "execution_count": null,
       "outputs": []
